<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.orange.tabpages.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ViewFlipper
                android:id="@+id/main_banner"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:id="@+id/category_first_line_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    >
                    <Button
                        android:id="@+id/category_tonghua"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/category_name_tonghua"
                        android:layout_weight="1"
                        android:background="#fff"
                        />
                    <Button
                        android:id="@+id/category_yuyan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/category_name_yuyan"
                        android:layout_weight="1"
                        android:background="#fff"
                        />
                    <Button
                        android:id="@+id/category_shuiqian"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category_name_shuiqian"
                        android:layout_weight="1"
                        android:background="#fff"
                        />
                    <Button
                        android:id="@+id/category_guoxue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category_name_guoxue"
                        android:layout_weight="1"
                        android:background="#fff"
                        />
                    <Button
                        android:id="@+id/category_shenhua"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category_name_shenhua"
                        android:layout_weight="1"
                        android:background="#fff"
                        />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/category_second_line_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    >
                    <Button
                        android:id="@+id/category_yingyu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/category_name_yingyu"
                        android:layout_weight="1"
                        android:background="#fff"
                        />
                    <Button
                        android:id="@+id/category_baike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/category_name_baike"
                        android:layout_weight="1"
                        android:background="#fff"
                        />
                    <Button
                        android:id="@+id/category_huiben"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category_name_huiben"
                        android:layout_weight="1"
                        android:background="#fff"
                        />
                    <Button
                        android:id="@+id/category_mingzhu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category_name_mingzhu"
                        android:layout_weight="1"
                        android:background="#fff"
                        />
                    <Button
                        android:id="@+id/category_qita"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category_name_qita"
                        android:layout_weight="1"
                        android:background="#fff"
                        />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="#f4f4f4"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/main_search"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="left|center_vertical"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:paddingLeft="20dp"
                    android:background="@drawable/round_button_background"
                    android:text="@string/main_search_story"
                    android:textSize="18sp"
                    android:textColor="#ccc"
                    />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/home_stories_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </ScrollView>
</FrameLayout>
