<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:textColor="#222"
                android:textSize="18sp"
                android:text="@string/title_main"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#AAAAAA"/>
    </LinearLayout>


    <FrameLayout
        android:id="@+id/fragment_page_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        ></FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#AAAAAA"/>
    <RadioGroup
        android:id="@+id/tab_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/tab_home"
            style="@style/MTabStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="true"
            android:drawableTop="@drawable/main_tab_home_selector"
            android:text="@string/tab_title_home" />
        <RadioButton
            style="@style/MTabStyle"
            android:id="@+id/tab_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tab_title_play"
            android:drawableTop="@drawable/main_tab_play_selector"
            />

        <RadioButton
            style="@style/MTabStyle"
            android:id="@+id/tab_find"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tab_title_find"
            android:drawableTop="@drawable/find"
            />
        <RadioButton
            style="@style/MTabStyle"
            android:id="@+id/tab_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tab_title_user"
            android:drawableTop="@drawable/find"
            />
    </RadioGroup>
</LinearLayout>
